# StatGuardian

./: AGENTS.md  AWESOME_PYTHON_SUBMISSION.md  AWESOME_RUST_SUBMISSION.md  BENCHMARKS.md  BENCHMARKS_AND_COMPARISON.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HOW_TO_SUBMIT_AWESOME.md  IMPLEMENTATION_ROADMAP.md  INSTALL.md  LICENSES.md  OKF_INTEGRATION.md  PRESS_RELEASE_DISTRIBUTION.md  PRIORITIZATION_FRAMEWORK.md  PRODUCT_ROADMAP.md  README.md  RELEASE_ANNOUNCEMENT.md  ROADMAP.md  STATGUARDIAN_VISION.md  pyproject.toml  pyproject.toml.bak
crates/statguard-core/src/: streaming.rs
crates/statguard-py/: Cargo.toml
crates/statguard-py/src/: lib.rs
crates/statguardian-core/: Cargo.toml
crates/statguardian-core/src/: ast.rs  error.rs  lib.rs  streaming.rs
crates/statguardian-core/src/compiler/: dag.rs  mod.rs  optimizer.rs
crates/statguardian-core/src/parser/: mod.rs
crates/statguardian-engine/: Cargo.toml
crates/statguardian-engine/src/: batch.rs  lib.rs
crates/statguardian-io/: Cargo.toml
crates/statguardian-io/src/: cloud.rs  delta.rs  iceberg.rs  lib.rs  sql.rs
crates/statguardian-metrics/: Cargo.toml
crates/statguardian-metrics/src/: report.rs
crates/statguardian-py/: Cargo.toml
crates/statguardian-py/src/: lib.rs
crates/statguardian-stats/: Cargo.toml
crates/statguardian-stats/src/: drift.rs  hll.rs  profiler.rs
crates/statguardian-validators/: Cargo.toml
crates/statguardian-validators/src/: lib.rs  rules.rs  schema.rs
docs/: CLI.md  FORMAT_COMPATIBILITY.md
docs/bench/: benchmark.py
examples/: lakehouse_pipeline.py  python_quickstart.py
python/statguard/: _connectors.py  _html.py  _validators.py
python/statguardian/: _UPDATES.txt  __init__.py  _anomaly_detection.py  _cli.py  _connectors.py  _evolution.py  _gpu.py  _html.py  _integrity.py  _parallel.py  _validators.py  okf_contracts.py
tests/: integration_test.rs  test_okf_contracts.py  test_parser.rs  test_security.rs  test_validators.rs
