[package]
name        = "statguardian-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance execution engine for StatGuard contracts (batch + streaming)"

[dependencies]
statguardian-core       = { path = "../statguardian-core" }
statguardian-validators = { path = "../statguardian-validators" }
statguardian-stats      = { path = "../statguardian-stats" }
statguardian-metrics    = { path = "../statguardian-metrics" }
statguardian-io         = { path = "../statguardian-io" }
polars               = { workspace = true }
rayon                = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
thiserror            = { workspace = true }
anyhow               = { workspace = true }
log                  = { workspace = true }
regex                = { workspace = true }
