[package]
name        = "statguardian-metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Report generation and observability output for StatGuard"

[dependencies]
statguardian-core       = { path = "../statguardian-core" }
statguardian-validators = { path = "../statguardian-validators" }
statguardian-stats      = { path = "../statguardian-stats" }
serde                = { workspace = true }
serde_json           = { workspace = true }
thiserror            = { workspace = true }
chrono               = { workspace = true }
uuid                 = { workspace = true }
