[package]
name        = "statguardian"           # this is the Python module name
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for statguardian — Rust-native data quality and drift engine"

[lib]
name    = "_statguardian"
crate-type = ["cdylib"]

[dependencies]
statguardian-core    = { path = "../statguardian-core" }
statguardian-engine  = { path = "../statguardian-engine" }
statguardian-metrics = { path = "../statguardian-metrics" }
statguardian-io      = { path = "../statguardian-io", features = [] }
pyo3              = { workspace = true }
pyo3-polars       = { workspace = true }
polars            = { workspace = true }
serde_json        = { workspace = true }
