[package]
name        = "statguardian-validators"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Schema, constraint, and rule validation for StatGuard"

[dependencies]
statguardian-core = { path = "../statguardian-core" }
polars         = { workspace = true }
regex          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
rayon          = { workspace = true }
